<resources>
    <string name="app_name">Food Delivery App</string>
    <string name="login">d\n</string>
    <string name="Foodelivery">Sizzling\n</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="user">User</string>
    <string name="_10_00_22_00">10:00-22:00</string>
    <string name="product_name">Product Name</string>
    <string name="rating">4.0</string>
    <string name="your_favourite_food_is_here">your favourite food is here!</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="view_more">view more</string>
    <string name="sizzling">Sizzling</string>
    <string name="eat_healthy_stay_healthy">Eat Healthy, Stay Healthy</string>
    <string name="sign_in">Sign In</string>
</resources>