<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fooddeliveryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_mycart"
            app:destination="@id/nav_mycart" />
        <action
            android:id="@+id/action_home_to_daily_meal"
            app:destination="@id/nav_daily_meal" />
    </fragment>

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.fooddeliveryapp.ui.dailymeal.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment">
        <!-- Action to navigate back to MyCartFragment -->
        <action
            android:id="@+id/action_daily_meal_to_mycart"
            app:destination="@id/nav_mycart" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.fooddeliveryapp.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/nav_mycart"
        android:name="com.example.fooddeliveryapp.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>